--- a/index.html
+++ b/index.html
@@ -15,162 +15,189 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 </td>
 <td id="layout-content">
-<h1>Ruichen Jiang</h1>
+<p>
+</p>
+<h1>Ruichen Jiang</h1>
+<p>
+</p>
 <table class="imgtable"><tr><td>
-<a href="https://raymond30.github.io/"><img src="photos/headshot.jpg" alt="A photo of myself" width="218px" height="221px" /></a>&nbsp;</td>
+<a href="https://ruichen-jiang.github.io/"><img src="photos/headshot.jpg" alt="A photo of myself" width="218px" height="221px" /></a>&nbsp;</td>
 <td align="left"><p>Ph.D. student, <br />
-<a href="https://www.ece.utexas.edu/">Department of Electrical and Computer Engineering</a>, <br />
-<a href="https://www.utexas.edu/">The University of Texas at Austin</a> <br />
+<a href="https://www.ece.utexas.edu/" target=&ldquo;blank&rdquo;>Department of Electrical and Computer Engineering</a>, <br />
+<a href="https://www.utexas.edu/" target=&ldquo;blank&rdquo;>The University of Texas at Austin</a> <br />
 
 E-mail: rjiang [at] utexas [dot] edu <br />
-<a href="https://scholar.google.com/citations?hl=en&amp;user=BGFt1UMAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>
+<a href="https://scholar.google.com/citations?hl=en&amp;user=BGFt1UMAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target=&ldquo;blank&rdquo;>Google Scholar</a>
+
 </p>
 </td></tr></table>
-<h2>About me</h2>
-<p>I am a 5th-year Ph.D. student in the Department of ECE at UT Austin, advised by <a href="https://sites.utexas.edu/mokhtari/">Prof. Aryan Mokhtari</a>. 
-Before UT, I received a B.E. degree in Electronic Engineering and a B.S. degree in Mathematics both from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2020.  </p>
-<p>My current research interests focus on <b>convex</b> and <b>non-convex optimization</b>, particularly in using <b>online learning</b> techniques to design optimization methods. Recently, I have been working on min-max optimization, second-order and higher-order methods, and bilevel optimization. </p>
-<h2>Selected Works</h2>
+<h2>About me</h2>
+<p>I am a 5th-year Ph.D. student in the Department of ECE at UT Austin, advised by <a href="https://sites.utexas.edu/mokhtari/" target=&ldquo;blank&rdquo;>Prof. Aryan Mokhtari</a>. 
+Before UT, I received a B.E. degree in Electronic Engineering and a B.S. degree in Mathematics both from <a href="https://www.tsinghua.edu.cn/en/" target=&ldquo;blank&rdquo;>Tsinghua University</a> in 2020.  
+
+My current research interests focus on <b>convex</b> and <b>non-convex optimization</b>, particularly in using <b>online learning</b> techniques to design optimization methods. Recently, I have been working on min-max optimization, second-order and higher-order methods, and bilevel optimization. 
+
+</p>
+<h2>Selected Works</h2>
+<p>
+</p>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2306.02212">Accelerated Quasi-Newton Proximal Extragradient: Faster Rate for Smooth Convex Optimization</a> <br />
+<li><p><a href="https://arxiv.org/abs/2306.02212" target=&ldquo;blank&rdquo;>Accelerated Quasi-Newton Proximal Extragradient: Faster Rate for Smooth Convex Optimization</a> <br />
 <b>Ruichen Jiang</b> and Aryan Mokhtari <br />
-NeurIPS 2023 (<b>Spotlight</b>)</p>
+NeurIPS 2023 (<b>Spotlight</b>)
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2302.08580">Online Learning Guided Curvature Approximation: A Quasi-Newton Method with Global Non-Asymptotic Superlinear Convergence</a> <br />
+<li><p><a href="https://arxiv.org/abs/2302.08580" target=&ldquo;blank&rdquo;>Online Learning Guided Curvature Approximation: A Quasi-Newton Method with Global Non-Asymptotic Superlinear Convergence</a> <br />
 <b>Ruichen Jiang</b>, Qiujiang Jin, and Aryan Mokhtari <br />
-COLT 2023</p>
+COLT 2023
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2206.08868">A Conditional Gradient-based Method for Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
+<li><p><a href="https://arxiv.org/abs/2206.08868" target=&ldquo;blank&rdquo;>A Conditional Gradient-based Method for Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
 <b>Ruichen Jiang</b>, Nazanin Abolfazli, Aryan Mokhtari, and Erfan Yazdandoost Hamedani <br />
-AISTATS 2023</p>
+AISTATS 2023
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2202.09674">Generalized Optimistic Methods for Convex-Concave Saddle Point Problems</a> <br />
+<li><p><a href="https://arxiv.org/abs/2202.09674" target=&ldquo;blank&rdquo;>Generalized Optimistic Methods for Convex-Concave Saddle Point Problems</a> <br />
 <b>Ruichen Jiang</b> and Aryan Mokhtari <br />
-ArXiv preprint, 2022</p>
+ArXiv preprint, 2022
+
+</p>
 </li>
 </ul>
-<h2>All Conference Papers</h2>
+<h2>All Conference Papers</h2>
+<p>
+</p>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2401.03058">Krylov Cubic Regularized Newton: A Subspace Second-Order Method with Dimension-Free Convergence Rate</a> <br />
+<li><p><a href="https://arxiv.org/abs/2406.02016" target=&ldquo;blank&rdquo;>Adaptive and Optimal Second-order Optimistic Methods for Minimax Optimization</a> <br />
+<b>Ruichen Jiang</b>, Ali Kavis, Qiujiang Jin, Sujay Sanghavi, Aryan Mokhtari <br />
+NeurIPS 2024
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2406.01478" target=&ldquo;blank&rdquo;>Stochastic Newton Proximal Extragradient Method</a> <br />
+<b>Ruichen Jiang</b>, Michał Dereziński, Aryan Mokhtari <br />
+NeurIPS 2024
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2404.16731" target=&ldquo;blank&rdquo;>Non-asymptotic Global Convergence Analysis of BFGS with the Armijo-Wolfe Line Search</a> <br />
+Qiujiang Jin, <b>Ruichen Jiang</b>, Aryan Mokhtari <br />
+NeurIPS 2024 (<b>Spotlight</b>)
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2402.08097" target=&ldquo;blank&rdquo;>An Accelerated Gradient Method for Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
+Jincheng Cao, <b>Ruichen Jiang</b>, Erfan Yazdandoost Hamedani, Aryan Mokhtari <br />
+NeurIPS 2024
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2401.03058" target=&ldquo;blank&rdquo;>Krylov Cubic Regularized Newton: A Subspace Second-Order Method with Dimension-Free Convergence Rate</a> <br />
 <b>Ruichen Jiang</b>, Parameswaran Raman, Shoham Sabach, Aryan Mokhtari, Mingyi Hong, and Volkan Cevher <br />
-AISTATS 2024</p>
+AISTATS 2024
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2306.02212">Accelerated Quasi-Newton Proximal Extragradient: Faster Rate for Smooth Convex Optimization</a> <br />
+<li><p><a href="https://arxiv.org/abs/2306.02212" target=&ldquo;blank&rdquo;>Accelerated Quasi-Newton Proximal Extragradient: Faster Rate for Smooth Convex Optimization</a> <br />
 <b>Ruichen Jiang</b> and Aryan Mokhtari <br />
-NeurIPS 2023 (<b>Spotlight</b>)</p>
+NeurIPS 2023 (<b>Spotlight</b>)
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2308.07536">Projection-Free Methods for Stochastic Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
+<li><p><a href="https://arxiv.org/abs/2308.07536" target=&ldquo;blank&rdquo;>Projection-Free Methods for Stochastic Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
 Jincheng Cao, <b>Ruichen Jiang</b>, Nazanin Abolfazli, Erfan Yazdandoost Hamedani, and Aryan Mokhtari <br />
-NeurIPS 2023</p>
+NeurIPS 2023
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2302.08580">Online Learning Guided Curvature Approximation: A Quasi-Newton Method with Global Non-Asymptotic Superlinear Convergence</a> <br />
+<li><p><a href="https://arxiv.org/abs/2302.08580" target=&ldquo;blank&rdquo;>Online Learning Guided Curvature Approximation: A Quasi-Newton Method with Global Non-Asymptotic Superlinear Convergence</a> <br />
 <b>Ruichen Jiang</b>, Qiujiang Jin, and Aryan Mokhtari <br />
-COLT 2023</p>
+COLT 2023
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2206.08868">A Conditional Gradient-based Method for Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
+<li><p><a href="https://arxiv.org/abs/2206.08868" target=&ldquo;blank&rdquo;>A Conditional Gradient-based Method for Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
 <b>Ruichen Jiang</b>, Nazanin Abolfazli, Aryan Mokhtari, and Erfan Yazdandoost Hamedani <br />
-AISTATS 2023</p>
+AISTATS 2023
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://openreview.net/forum?id=H34Ah8Loqgq">Future Gradient Descent for Adapting the Temporal Shifting Data Distribution in Online Recommendation System</a> <br />
+<li><p><a href="https://openreview.net/forum?id=H34Ah8Loqgq" target=&ldquo;blank&rdquo;>Future Gradient Descent for Adapting the Temporal Shifting Data Distribution in Online Recommendation System</a> <br />
 Mao Ye, <b>Ruichen Jiang</b>, Haoxiang Wang, Dhruv Choudhary, Xiaocong Du, Bhargav Bhushanam, Aryan Mokhtari, Arun Kejariwal, and Qiang Liu <br />
-UAI 2022</p>
+UAI 2022
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2104.11549">Antenna Efficiency in Massive MIMO Detection</a> <br />
+<li><p><a href="https://arxiv.org/abs/2104.11549" target=&ldquo;blank&rdquo;>Antenna Efficiency in Massive MIMO Detection</a> <br />
 <b>Ruichen Jiang</b> and Ya-Feng Liu <br />
 IEEE SPAWC 2021
+
+
 </p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://ieeexplore.ieee.org/document/9348844">Achieving Cooperative Diversity in Over-the-Air Computation via Relay Selection</a> <br />
+<li><p><a href="https://ieeexplore.ieee.org/document/9348844" target=&ldquo;blank&rdquo;>Achieving Cooperative Diversity in Over-the-Air Computation via Relay Selection</a> <br />
 <b>Ruichen Jiang</b>, Sheng Zhou, and Kaibin Huang <br />
 IEEE VTC2020-Fall 2020
+
+
 </p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2008.00994">Cluster-Based Cooperative Digital Over-the-Air Aggregation for Wireless Federated Edge Learning</a> <br />
+<li><p><a href="https://arxiv.org/abs/2008.00994" target=&ldquo;blank&rdquo;>Cluster-Based Cooperative Digital Over-the-Air Aggregation for Wireless Federated Edge Learning</a> <br />
 <b>Ruichen Jiang</b> and Sheng Zhou <br />
 IEEE/CIC ICCC 2020
+
+
 </p>
 </li>
 </ul>
-<h2>All Preprints</h2>
+<h2>All Preprints</h2>
+<p>
+</p>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2406.04592">Convergence Analysis of Adaptive Gradient Methods under Refined Smoothness and Noise Assumptions</a> <br />
-Devyani Maladkar, <b>Ruichen Jiang</b>, Aryan Mokhtari <br />
-ArXiv preprint, 2024</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2406.02016">Adaptive and Optimal Second-order Optimistic Methods for Minimax Optimization</a> <br />
-<b>Ruichen Jiang</b>, Ali Kavis, Qiujiang Jin, Sujay Sanghavi, Aryan Mokhtari <br />
-ArXiv preprint, 2024</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2406.01478">Stochastic Newton Proximal Extragradient Method</a> <br />
-<b>Ruichen Jiang</b>, Michał Dereziński, Aryan Mokhtari <br />
-ArXiv preprint, 2024</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2404.16731">Non-asymptotic Global Convergence Analysis of BFGS with the Armijo-Wolfe Line Search</a> <br />
-Qiujiang Jin, <b>Ruichen Jiang</b>, Aryan Mokhtari <br />
-ArXiv preprint, 2024</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2404.01267">Non-asymptotic Global Convergence Rates of BFGS with Exact Line Search</a> <br />
-Qiujiang Jin, <b>Ruichen Jiang</b>, Aryan Mokhtari <br />
-ArXiv preprint, 2024</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2402.08097">An Accelerated Gradient Method for Simple Bilevel Optimization with Convex Lower-level Problem</a> <br />
-Jincheng Cao, <b>Ruichen Jiang</b>, Erfan Yazdandoost Hamedani, Aryan Mokhtari <br />
-ArXiv preprint, 2024</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2306.02429">An Inexact Conditional Gradient Method for Constrained Bilevel Optimization</a> <br />
-Nazanin Abolfazli, <b>Ruichen Jiang</b>, Aryan Mokhtari, and Erfan Yazdandoost Hamedani  <br />
-ArXiv preprint, 2023</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2202.09674">Generalized Optimistic Methods for Convex-Concave Saddle Point Problems</a> <br />
+<li><p><a href="https://arxiv.org/abs/2410.02626" target=&ldquo;blank&rdquo;>Online Learning Guided Quasi-Newton Methods with Global Non-Asymptotic Convergence</a> <br />
 <b>Ruichen Jiang</b> and Aryan Mokhtari <br />
-ArXiv preprint, 2022</p>
+ArXiv preprint, 2024
+
+</p>
 </li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2102.04586">Tightness and Equivalence of Semidefinite Relaxations for MIMO Detection</a> [<a href="http://lsec.cc.ac.cn/~yafliu/Technical_Report_MIMO.pdf">Companion Report</a>] <br />
+<li><p><a href="https://arxiv.org/abs/2406.04592" target=&ldquo;blank&rdquo;>Convergence Analysis of Adaptive Gradient Methods under Refined Smoothness and Noise Assumptions</a> <br />
+Devyani Maladkar, <b>Ruichen Jiang</b>, Aryan Mokhtari <br />
+ArXiv preprint, 2024
+
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2404.01267" target=&ldquo;blank&rdquo;>Non-asymptotic Global Convergence Rates of BFGS with Exact Line Search</a> <br />
+Qiujiang Jin, <b>Ruichen Jiang</b>, Aryan Mokhtari <br />
+ArXiv preprint, 2024
+
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2306.02429" target=&ldquo;blank&rdquo;>An Inexact Conditional Gradient Method for Constrained Bilevel Optimization</a> <br />
+Nazanin Abolfazli, <b>Ruichen Jiang</b>, Aryan Mokhtari, and Erfan Yazdandoost Hamedani  <br />
+ArXiv preprint, 2023
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2202.09674" target=&ldquo;blank&rdquo;>Generalized Optimistic Methods for Convex-Concave Saddle Point Problems</a> <br />
+<b>Ruichen Jiang</b> and Aryan Mokhtari <br />
+ArXiv preprint, 2022
+
+</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2102.04586" target=&ldquo;blank&rdquo;>Tightness and Equivalence of Semidefinite Relaxations for MIMO Detection</a> [<a href="http://lsec.cc.ac.cn/~yafliu/Technical_Report_MIMO.pdf" target=&ldquo;blank&rdquo;>Companion Report</a>] <br />
 <b>Ruichen Jiang</b>, Ya-Feng Liu, Chenglong Bao, and Bo Jiang <br />
-ArXiv preprint, 2021</p>
+ArXiv preprint, 2021
+</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-09 00:23:05 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-03 21:11:08 CDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
